[package]
authors = ["Tyler Cook"]
description = "Turning commits into cryptocurrency"
edition = "2021"
license = "Unlicense"
name = "git-turbine"
repository = "https://github.com/fossable/turbine"
rust-version = "1.74"
version = "0.0.5"

[lib]
name = "git_turbine"
path = "src/lib.rs"

[[bin]]
name = "turbine"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
askama_axum = "0.4.0"
askama = { version = "0.12.1", features = ["with-axum"] }
axum = "0.7.5"
axum-macros = "0.4.1"
base64 = "0.22.1"
cached = { version = "0.56.0", features = ["async"] }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["string", "derive"] }
config = "0.13.4"
float-pretty-print = "0.1.1"
git2 = "0.20.2"
# gpgme = "0.11.0"
hex = "0.4.3"
mime_guess = "2.0.4"
monero = "0.21.0"
monero-rpc = { version = "0.5.0", features = [
  "rpc_authentication",
], optional = true }
reqwest = { version = "0.12.4", features = ["json"] }
rust-embed = { version = "8.4.0", features = ["axum", "debug-embed"] }
serde = { version = "1.0.203", features = ["derive"] }
tempfile = "3.10.1"
tokio_schedule = "0.3.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
monero = ["dep:monero-rpc"]
